--- a/04-Resources/04-01-cfn-ec2-instance.yml
+++ b/04-Resources/04-01-cfn-ec2-instance.yml
@@ -9,4 +9,5 @@ Resources:
       InstanceType: t2.micro
       KeyName: cfn-key-1
       SecurityGroups:
-        - default
+        - defaultls
+        
