--- a/04-Resources/04-05-cfn-ec2-case-sensitive-test.yml
+++ b/04-Resources/04-05-cfn-ec2-case-sensitive-test.yml
@@ -27,7 +27,7 @@ Resources:
         - IpProtocol: tcp
           FromPort: '8081'
           ToPort: '8081'
-          CidrIP: 0.0.0.0/0          
+          CidrIp: 0.0.0.0/0          
 
   MyElasticIP:
     Type: AWS::EC2::EIP
